// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render renders with gap param 1`] = `
.c0 {
  display: grid;
  grid-template-columns: repeat(auto-fit,minmax(320px,1fr));
  grid-gap: 30px;
}

<div
  className="c0"
/>
`;

exports[`render renders with strings 1`] = `
.c0 {
  display: grid;
  grid-template-columns: repeat(auto-fit,minmax(300px,1fr));
  grid-gap: 20px;
}

<div
  className="c0"
/>
`;

exports[`render renders with width param 1`] = `
.c0 {
  display: grid;
  grid-template-columns: repeat(auto-fit,minmax(300px,1fr));
  grid-gap: 32px;
}

<div
  className="c0"
/>
`;

exports[`render renders without crashing 1`] = `
.c0 {
  display: grid;
  grid-template-columns: repeat(auto-fit,minmax(320px,1fr));
  grid-gap: 32px;
}

<div
  className="c0"
/>
`;
